<?xml version="1.0" encoding="utf-8"?>
<com.dong.baselib.widget.layout.UiLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_12sdp"
    android:orientation="vertical"
    app:bgColorAll="@color/white"
    app:cornerRadius="@dimen/_12sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/color_background"
        android:orientation="vertical"
        android:padding="@dimen/_16sdp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rb_600"
            android:includeFontPadding="false"
            android:text="@string/confirm"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:fontFamily="@font/rb_400"
        android:includeFontPadding="false"
        android:text="@string/are_you_sure_want_to_quit_app"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="@dimen/_13sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:orientation="horizontal"
        android:weightSum="2">

        <com.dong.baselib.widget.view.UiTextView
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_6sdp"
            android:layout_weight="1"
            android:fontFamily="@font/rb_500"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/cancels"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp"
            app:cornerRadius="@dimen/_8sdp"
            app:stColorAll="@color/black"
            app:strokeWidth="@dimen/_1sdp" />

        <com.dong.baselib.widget.view.UiTextView
            android:id="@+id/btnAgree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_weight="1"
            android:fontFamily="@font/rb_600"
            android:gravity="center"
            android:includeFontPadding="false"
            android:maxLines="1"
            android:padding="@dimen/_10sdp"
            android:text="@string/exit"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp"
            app:bgColorAll="@color/mainColor"
            app:cornerRadius="@dimen/_8sdp" />
    </LinearLayout>
</com.dong.baselib.widget.layout.UiLinearLayout>
